SERVER-74585 Ensure shard Merge recipient aborts correctly on rollbacks and restarts.

GitOrigin-RevId: 23c5bda980d4cd3bf5a30fae523d6f78b08e859d