src/mongo/db/modules/enterprise/src/audit/audit_op_observer.h
@@ -102,6 +102,7 @@ public:
     void onStepUpBegin(OperationContext* opCtx, long long term) override final {}
     void onStepUpComplete(OperationContext* opCtx, long long term) override final {}
     void onStepDown() override final {}
+    void onRollback() override final {}
     std::string getServiceName() const override final {
         return "AuditInitializer";
     }
